--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
+.outerbox{
+
+  width: 100%;
+  background-color: #111111;
+  padding-bottom: 200px;
+  overflow: hidden;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: auto;
+  max-width: 1920px;
   color: white;
+  background-image: url("../public/Data/gardient.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 230%;
+  
+  /* background: conic-gradient(#FFE13E 0%, #D84D22 26.58%, #683D8F 39.12%,#BF2E35 50.71%,#BE4684 74.17%,rgba(143, 95, 188, 0.23) 100%);
+  opacity: 40%; */
 }
 
-.App-link {
-  color: #61dafb;
+.cursor {
+
+  position: fixed;
+  width: 20px;
+  height: 25px;
+  background-color: transparent;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  z-index: 11;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: .15s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cursor img{
+
+  max-width: 100%;
 }
+
+/* @media (max-width:450px){
+
+  .nav{
+
+    position: sticky;
+    top:1px;
+  }
+} */
